RESOLVED FIXED158355
REGRESSION(r201474): Subtitles are not resizing in other fullscreen modes
https://bugs.webkit.org/show_bug.cgi?id=158355
Summary REGRESSION(r201474): Subtitles are not resizing in other fullscreen modes
Ada Chan
Reported 2016-06-03 14:01:43 PDT
This regressed after the introduction of a secondary video layer in MediaPlayerPrivateAVFoundationObjC in http://trac.webkit.org/changeset/201474 <rdar://problem/26627055>
Attachments
Patch (1.93 KB, patch)
2016-06-03 14:24 PDT, Ada Chan
eric.carlson: review+
Ada Chan
Comment 1 2016-06-03 14:24:40 PDT
Ada Chan
Comment 2 2016-06-03 14:58:54 PDT
Note You need to log in before you can comment on or make changes to this bug.