REGRESSION(r201474): Subtitles are not resizing in other fullscreen modes https://bugs.webkit.org/show_bug.cgi?id=158355

Reviewed by Eric Carlson.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::syncTextTrackBounds):
Set the text track representation layer's frame based on the active video layer.

Canonical link: https://commits.webkit.org/176447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201661 268f45cc-cd09-0410-ab3c-d52691b4dbfc